Fix rutas OCR y ajustes App.tsx/api.ts

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,5 +17,5 @@
     "jsx": "react-jsx",
     "types": ["vite/client"]
   },
-  "include": ["src", "main.tsx"]
+  "include": ["src", "main.tsx", "api.ts"]
 }
